# VRender

./: .gitignore  CMakeLists.txt  FindOptiX.sh  README.md  a.scene  sampleConfig.h.in  wdfcvw
CMake/: ConfigCompilerFlags.cmake  FindCUDA.cmake  FindMDLWrapper.cmake  FindOptiX.cmake  FindSUtilGLUT.cmake  Macros.cmake
CMake/FindCUDA/: run_nvcc.cmake
Cornell/: Scene.txt
Cornell/Materials/: default.txt  light.txt  metal.txt  mirror.txt  red.txt  texture_example.txt  transparent.txt
Geometries/: optixGeometryTriangles.cu  parallelogram.cu  triangle_mesh.cu
Imgui/: imgui.h  imgui_widgets.cpp
Material/: CMakeLists.txt
Materials/: axis.txt  default_blue.txt  default_feb.txt  default_red.txt  default_transparent.txt  error.txt  light.txt
Renderer/: CMakeLists.txt  CommonInclude.h  DataBridge.h  GUI.hpp  GlutEvent.h  OptiXLayer.cpp  OptiXLayer.h  PBS.h  VDebug.h  VRender.hpp  default_pipeline.hpp  glviewer.h  main.cpp  optixPathTracer - 副本.cu  optixPathTracer.cu  optixPathTracer.h  parallelogram.cu  path_tracer.cu  photon_map.cu  random.h  renderer_window.ui  resource.h  transform_widget.cpp  transform_widget.h  vector_widget.cpp  vector_widget.h
Renderer.old/: OptiXLayer.cpp  OptiXLayer.h  resource.rc
Renderer.old/Support/: Components.h
Renderer.re/: CMakeLists.txt  glviewer.cpp  glviewer.h
Renderer.re/Support/: Basic.cpp  Basic.h  Scene.cpp  Scene.h
Renderer/Component/: BasicComponent.cpp  BasicComponent.hpp  Light.cpp  Light.hpp  MeshFilter.cpp  MeshFilter.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Object.cpp  Object.hpp  Transform.cpp  Transform.hpp
Renderer/GUI/: DXWrapper.hpp  HandleMathHelper.hpp  UIView.hpp  renderView.hpp
Renderer/Manager/: Manager.cpp  Manager.hpp
Renderer/Pipeline/: Pipeline.hpp  PipelineUtility.cpp  PipelineUtility.hpp
Renderer/Support/: Basic.cpp  Basic.h  CommonInclude.h  Components.cpp  Components.h  Material.cpp  Material.h  Scene.cpp  Scene.h  objLoader.h
Renderer/VRender/: Scene.cpp  Scene.hpp  VRender.cpp  VRender.hpp
Shaders/: axis.cu  blit.cu  default_light.cu  default_lit.cu  error.cu  path_tracer_camera.cu  photon_map.cu  renderer_post.cu
build_/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  VRenderer.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  sampleConfig.h
build_/Imgui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Imgui.sln  Imgui.vcxproj  Imgui.vcxproj.filters  cmake_install.cmake
build_/Renderer/: Renderer.vcxproj  Renderer.vcxproj.filters  cmake_install.cmake  imgui.ini
build_/sutil/: cmake_install.cmake  sutil_sdk.vcxproj  sutil_sdk.vcxproj.filters
cuda/: DataBridge.h  PBS.h  bitonic_sort.cu  commonStructs.h  helpers.h  intersection_refinement.h  path_tracer.cuh  phong.cu  phong.h  photon_map.cu  post_process.cuh  random.h  triangle_mesh.cu
cuda_thrust test/: CMakeLists.txt  gpu_kdtree.cu  gpu_kdtree.cuh  gpu_kdtree_basic.cuh  gpu_kdtree_helper.cuh  main.cpp  main.cu
data/: CedarCity.ppm  Kumanomi.mtl  colormap.ppm  daisy6.mtl  example_df.mdl  grass1.mtl  grass5.mtl  optixMDLDisplacement.mdl  optixMDLExpressions.mdl
data/particles/: particles.0001.txt  particles.0002.txt  particles.0003.txt  particles.0004.txt  particles.0005.txt  particles.0006.txt  particles.0007.txt  particles.0008.txt  particles.0009.txt  particles.0010.txt  particles.0011.txt  particles.0012.txt  particles.0013.txt  particles.0014.txt  particles.0015.txt  particles.0016.txt  particles.0017.txt  particles.0018.txt  particles.0019.txt  particles.0020.txt  particles.0021.txt  particles.0022.txt  particles.0023.txt  particles.0024.txt  particles.0025.txt
putil/: Preprocessor.h
support/freeglut/include/GL/: freeglut_std.h
support/mdl-sdk/include/mi/neuraylib/: target_code_types.h
support/mdl_wrapper/include/: mdl_wrapper.h
support/mdl_wrapper/lib/: mdl_wrapper.lib
sutil/: Arcball.cpp  Arcball.h  CMakeLists.txt  HDRLoader.cpp  HDRLoader.h  Mesh.cpp  Mesh.h  OptiXMesh.cpp  OptiXMesh.h  PPMLoader.cpp  PPMLoader.h  glext.h  sutil.cpp  sutil.h  sutilapi.h
sutil/rply-1.01/: LICENSE  rply.c  rply.h
sutil/tinyobjloader/: tiny_obj_loader.h
